<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="86dp">

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/CPU"
        app:layout_constraintStart_toEndOf="@+id/CPU"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/GPU"
        app:layout_constraintStart_toEndOf="@+id/GPU" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/Mainboard"
        app:layout_constraintStart_toEndOf="@+id/Mainboard" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/Case"
        app:layout_constraintStart_toEndOf="@+id/Case" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/Ram"
        app:layout_constraintStart_toEndOf="@+id/Ram" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/PSU"
        app:layout_constraintStart_toEndOf="@+id/PSU"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintBaseline_toBaselineOf="@+id/CPUfan"
        app:layout_constraintStart_toEndOf="@+id/CPUfan"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/CPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/cpu_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/GPU"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/gpu_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPU"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Mainboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/mainboard_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GPU"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/case_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mainboard"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Ram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/ram_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Case"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/PSU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/psu_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ram"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/CPUfan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/cpu_fan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PSU"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginBottom="48dp"
        android:onClick="goNextActivity"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="112dp"
        android:onClick="SaveInput"
        android:text="@string/save_input"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.273" />

</androidx.constraintlayout.widget.ConstraintLayout>